ID_chromosomes_text

--- a/README.html
+++ b/README.html
@@ -370,9 +370,10 @@ summary {
 <h1>BTOpenNLP</h1>
 <p>Building and Training models for openNLP. Several functions can potentially be useful for alternative bioinformatic pipelines.</p>
 </div>
-<div id="how-to-install-btopennlp-package" class="section level1">
-<h1>How to install BTOpenNLP package:</h1>
-<p><code>library(devtools)</code> <code>install_github(&quot;cromanpa94/BTOpenNLP&quot;)</code></p>
+<div id="how-to-install-btopennlp" class="section level1">
+<h1>How to install BTOpenNLP:</h1>
+<p><code>library(devtools)</code></p>
+<p><code>install_github(&quot;cromanpa94/BTOpenNLP&quot;)</code></p>
 </div>
 
 
